--- a/BusinessContract/BusinessContract.csproj
+++ b/BusinessContract/BusinessContract.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Constants\" />
+    <Folder Include="BusinessEntities\" />
+  </ItemGroup>
+
 </Project>
