--- a/BusinessCore/BusinessCore.csproj
+++ b/BusinessCore/BusinessCore.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Engines\" />
+    <Folder Include="Internals\" />
+    <Folder Include="Resources\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
