project structures updates

--- a/BusinessContract/BusinessContract.csproj
+++ b/BusinessContract/BusinessContract.csproj
@@ -11,4 +11,8 @@
     <Folder Include="BusinessEntities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessCore\BusinessCore.csproj" />
+  </ItemGroup>
+
 </Project>
