--- a/BusinessCore/BusinessCore.csproj
+++ b/BusinessCore/BusinessCore.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TalentRepository\TalentRepository.csproj" />
+  </ItemGroup>
+
 </Project>
